crates/glyph-cli/tests/corpus/invalid/duplicate_section_freeform.glyph
skill demo()
    description: "Demo."
    quality:
        "first"
    quality:
        "second"
    flow:
        "Do."
